--- a/style.css
+++ b/style.css
@@ -7,21 +7,21 @@
 }
 
 body {
-    background-color: #8a51fc;
+    background-color: #5db55d;
 }
 
 .logo {
-    width: 300px;
+    width: 255px;
     display: block;
     margin: 20px auto;
 }
 
 main {
-    width: 375px;
+    width: 370px;
     background: #f4f4f4;
     border-radius: 20px;
     margin: 0 auto 40px;
-    padding: 44px 24px 23px;
+    padding: 20px 24px 23px;
 }
 
 label {
@@ -30,14 +30,13 @@ label {
     font-size: 14px;
 }
 
-select,
-input {
+select, input {
     background: #ffffff;
     border: 1px solid #bbbbbb;
     border-radius: 4px;
     height: 48px;
     width: 100%;
-    margin-bottom: 24px;
+    margin-bottom: 15px;
     appearance: none;
     padding-left: 18px;
     font-weight: 700;
@@ -47,7 +46,7 @@ input {
 }
 
 button {
-    background: #772fd3;
+    background: #4d9c4d;
     border-radius: 5px;
     width: 100%;
     height: 48px;
@@ -66,14 +65,15 @@ button:active{
     opacity: 0.6;
 }
 
-section{
-    border: 1px solid #772fd3;
+section{    
+    border: 1px solid #4d9c4d;
     border-radius: 20px;
-    margin-top: 36px;
+    margin-top: 15px;
     padding: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 15px;
 }
 
 .arrow-img{
